[gd_scene load_steps=7 format=2]

[ext_resource path="res://ArenaAutomotiva/AutoMinigame/backgroundAuto2.png" type="Texture" id=1]
[ext_resource path="res://ArenaAutomotiva/AutoMinigame/Car_Monkey.tscn" type="PackedScene" id=2]
[ext_resource path="res://ArenaAutomotiva/AutoMinigame/Parking_Spot.tscn" type="PackedScene" id=3]
[ext_resource path="res://ArenaAutomotiva/AutoMinigame/MinigameAuto.gd" type="Script" id=4]
[ext_resource path="res://MinigameSuccess/SuccessPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://ArenaSoftware/SoftwareMinigame/M5X7Font.tres" type="DynamicFont" id=6]

[node name="MinigameAuto" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 443.0
margin_top = 52.0
margin_right = 749.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 6 )
text = "Buzine para finalizar o teste"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parking_Spot" parent="." instance=ExtResource( 3 )]
position = Vector2( 300.87, 130.813 )

[node name="Car_Monkey" parent="." instance=ExtResource( 2 )]
position = Vector2( 789.634, 549.414 )

[node name="SuccessPanel" parent="." instance=ExtResource( 5 )]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 0, -50 )
polygon = PoolVector2Array( 64, -14, 96, 50, 104, 802, 1256, 802, 1256, -14, 80, -14, 80, -62, 1288, -54, 1288, 826, 64, 826 )

[connection signal="body_entered" from="Parking_Spot" to="." method="_on_Parking_Spot_body_entered"]
[connection signal="body_exited" from="Parking_Spot" to="." method="_on_Parking_Spot_body_exited"]
